fix(miniapp,banner): DEPLOYED 라이브 필터 환원 + Banner 캐시 직렬화 수정
PR #42에서 도입한 MiniAppStatus.DEPLOYED 분리를 되돌린다.
운영 DB의 mini_apps_status_check 제약이 DEPLOYED 를 허용하지 않아
/app-versions/{id}/deploy 호출 시 SQLState 23514 로 500 폭사 + 기존
미니앱이 라이브 필터에서 빠져 앱 화면이 비는 문제가 있었음.

- 미니앱 라이브 노출 필터 14곳: MiniAppStatus.DEPLOYED → APPROVED
  (MiniAppService, MiniAppCacheService, MiniAppSearchService,
  AnalyticsIngestService, DevSeedService, DevSeedController)
- AppVersionService.deploy(): PR #42 이전 동작으로 환원. version.deploy()
  만 호출해 AppVersion.status 를 DEPLOYED 로 옮기고, MiniApp.status 는
  안전망으로 APPROVED 복원만 수행 (DEPLOYED 로 옮기지 않음).
- MiniApp.deploy() 메서드 및 MiniAppStatus.DEPLOYED enum 값 제거.

추가로 별개 이슈 해결:
- BannerService.getActiveBanners(): Stream.toList() → Collectors.toList().
  Java 16+ Stream.toList() 가 반환하는 ImmutableCollections\$ListN 이
  final 이라 GenericJackson2JsonRedisSerializer + DefaultTyping.NON_FINAL
  조합에서 type-id wrapper 가 박히지 않아 cache hit 라운드트립이 깨지던
  GET /banners 500 해결.