@@ -10,6 +10,7 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDateTime;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -28,7 +29,7 @@ public class BannerService {
         return bannerRepository.findActiveBanners(LocalDateTime.now())
                 .stream()
                 .map(BannerResponseDto::from)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     /**
